@@ -16,7 +16,6 @@ import java.io.FileNotFoundException;
 import java.text.DateFormat;
 import java.util.*;
 
-
 public class MyBot extends TelegramLongPollingBot {
     Locale ru = new Locale("ru");
     DateFormat sdf = DateFormat.getDateTimeInstance(DateFormat.SHORT, DateFormat.SHORT, ru);
@@ -37,53 +36,81 @@ public class MyBot extends TelegramLongPollingBot {
     public static final long GROUP_ID = -1002457027813l;
 //    private final List<Photo> PHOTOS;
 
-
     public MyBot() {
-
         this.USER_MAP = new HashMap<>();
         //  this.PHOTOS = new ArrayList<>();
         this.QUESTIONS = new ArrayList<>();
 
+        // Original questions
         QUESTIONS.add(new Question("В языке Java переменные типа boolean могут принимать значения",
-                List.of("true, false", "правда, ложь", "ложь, истина", "success, failed"),
-                0));
+                List.of("true, false", "правда, ложь", "ложь, истина", "success, failed"), 0));
         QUESTIONS.add(new Question("В языке Java для отрицания(инверсии) логического выражения используется оператор:",
-                List.of("!", "!=", "~", "not"),
-                1));
+                List.of("!", "!=", "~", "not"), 0));
         QUESTIONS.add(new Question("Строковые переменные a и b правильно сравниваются в выражении:",
-                List.of(" a == b", "a.equals(b)", "a.length() == b.length()", "a.toUpperCase() == b.toUpperCase"),
-                1));
+                List.of("a == b", "a.equals(b)", "a.length() == b.length()", "a.toUpperCase() == b.toUpperCase"), 1));
         QUESTIONS.add(new Question("Правильно скомпилируется вариант",
-                List.of("int x = 3.14;", "int x = (int) 3.14:", "int x = (double) 3.14;", "int x = (float) 3.14;"),
-                2));
+                List.of("int x = 3.14;", "int x = (int) 3.14:", "int x = (double) 3.14;", "int x = (float) 3.14;"), 1));
         QUESTIONS.add(new Question("Какой из примитивных типов данных есть в языке Java?",
-                List.of("bool", "shar", "char", "varchar"),
-                2));
+                List.of("bool", "shar", "char", "varchar"), 2));
         QUESTIONS.add(new Question("В классе объявили переменную String s, но еще не присвоили ей значение. Она содержит?",
-                List.of("\"\"", "0", "null", "nill"),
-                2));
+                List.of("\"\"", "0", "null", "nill"), 2));
         QUESTIONS.add(new Question("Новый объект в Java создается с помощью ключевого слова",
-                List.of("create", "alloc", "new", "return"),
-                2));
+                List.of("create", "alloc", "new", "return"), 2));
         QUESTIONS.add(new Question("Какой из этих принципов есть в ООП?",
-                List.of("Инкорпорация", "Перфекционизм", "Абстракционизм", "Наследование"),
-                3));
+                List.of("Инкорпорация", "Перфекционизм", "Абстракционизм", "Наследование"), 3));
         QUESTIONS.add(new Question("В каком из вариантов правильно описано наследование класса Собака и класса Волк?",
-                List.of("class Волк extends Собака", "class Собака extends Волк", "class Волк implements Собака", "class Собака implements Волк"),
-                1));
+                List.of("class Волк extends Собака", "class Собака extends Волк", "class Волк implements Собака", "class Собака implements Волк"), 1));
         QUESTIONS.add(new Question("Какой из вариантов содержит примитивные типы языка Java?",
+                List.of("int, real, string", "int, integer, string", "int, double, real, string", "int, double, float"), 3));
                 List.of("int, real, string", "int, integer, string", "int, double, real, string", "int, double, float"),
                 3));
     }
 
+        // Additional 20 questions
+        QUESTIONS.add(new Question("Какой метод вызывается при запуске программы Java?",
+                List.of("start()", "init()", "main()", "run()"), 2));
+        QUESTIONS.add(new Question("Какой модификатор доступа делает класс доступным только внутри пакета?",
+                List.of("private", "protected", "default", "public"), 2));
+        QUESTIONS.add(new Question("Какой оператор используется для создания массива?",
+                List.of("new", "create", "array", "declare"), 0));
+        QUESTIONS.add(new Question("Какой тип данных используется для хранения целых чисел?",
+                List.of("float", "double", "int", "char"), 2));
+        QUESTIONS.add(new Question("Какой метод используется для преобразования строки в число?",
+                List.of("parseInt()", "toString()", "valueOf()", "convert()"), 0));
+        QUESTIONS.add(new Question("Какой метод используется для сравнения строк без учета регистра?",
+                List.of("equalsIgnoreCase()", "equals()", "compareTo()", "contains()"), 0));
+        QUESTIONS.add(new Question("Какой метод используется для получения длины строки?",
+                List.of("size()", "length()", "count()", "getLength()"), 1));
+        QUESTIONS.add(new Question("Какой метод используется для добавления элемента в список?",
+                List.of("add()", "insert()", "push()", "append()"), 0));
+        QUESTIONS.add(new Question("Какой интерфейс реализует коллекции для хранения уникальных элементов?",
+                List.of("List", "Set", "Map", "Queue"), 1));
+        QUESTIONS.add(new Question("Какой метод используется для удаления всех элементов из коллекции?",
+                List.of("removeAll()", "clear()", "delete()", "erase()"), 1));
+        QUESTIONS.add(new Question("Какой метод используется для проверки наличия элемента в коллекции?",
+                List.of("contains()", "exists()", "find()", "search()"), 0));
+        QUESTIONS.add(new Question("Какой метод используется для получения первого элемента из очереди?",
+                List.of("poll()", "peek()", "pop()", "first()"), 0));
+        QUESTIONS.add(new Question("Какой метод используется для получения последнего элемента из стека?",
+                List.of("pop()", "peek()", "last()", "top()"), 0));
+        QUESTIONS.add(new Question("Какой метод используется для сортировки коллекции?",
+                List.of("sort()", "order()", "arrange()", "sequence()"), 0));
+        QUESTIONS.add(new Question("Какой метод используется для преобразования коллекции в массив?",
+                List.of("toArray()", "toObject()", "toList()", "toCollection()"), 0));
+        QUESTIONS.add(new Question("Какой метод используется для объединения двух коллекций?",
+                List.of("addAll()", "merge()", "concat()", "join()"), 0));
+        QUESTIONS.add(new Question("Какой метод используется для разделения строки по разделителю?",
+                List.of("split()", "divide()", "separate()", "partition()"), 0));
+        QUESTIONS.add(new Question("Какой метод используется для замены подстроки в строке?",
+                List.of("replace()", "swap()", "exchange()", "modify()"), 0));
+        QUESTIONS.add(new Question("Какой метод используется для обрезки пробелов в строке?",
+                List.of("trim()", "strip()", "cut()", "removeSpaces()"), 0));
+        QUESTIONS.add(new Question("Какой метод используется для преобразования строки в верхний регистр?",
+                List.of("toUpperCase()", "upper()", "capitalize()", "big()"), 0));
+    }
 
     @Override
     public void onUpdateReceived(Update update) {
-
-        if (update.hasMessage() && update.getMessage().getChatId().equals(GROUP_ID)) {
-            return;
-        }
-
         if (update.hasCallbackQuery()) {
             String answer = update.getCallbackQuery().getData();
             long chatId = update.getCallbackQuery().getMessage().getChatId();
@@ -113,11 +140,11 @@ public class MyBot extends TelegramLongPollingBot {
             Long chatId = update.getMessage().getChatId();
             Message message = update.getMessage();
             if (USER_MAP.get(chatId) == null) {
-                USER_MAP.put(chatId, new BotUser(message.getFrom().getId(), message.getFrom().getFirstName(), message.getFrom().getUserName()));
+                USER_MAP.put(chatId, new BotUser(message.getFrom().getId(), message.getFrom().getFirstName()));
 
-//                String wave = EmojiParser.parseToUnicode(":wave:");
-                sendMassage(chatId, "\nПривет " + " " + message.getFrom().getFirstName() + "! Пройди тест по Java ");
-                sendMessageWithButtons(chatId, QUESTIONS.getFirst().getNameQuestion(), QUESTIONS.getFirst().getAnswers());
+                String wave = EmojiParser.parseToUnicode(":wave:");
+                sendMassage(chatId, "\nПривет " + wave + " " + message.getFrom().getFirstName() + "! Пройди тест по Java ");
+                sendMessageWithButtons(chatId, QUESTIONS.get(0).getNameQuestion(), QUESTIONS.get(0).getAnswers());
 
 
             }
@@ -137,8 +164,6 @@ public class MyBot extends TelegramLongPollingBot {
             execute(replay);
         } catch (TelegramApiException e) {
             e.printStackTrace();
-            e.getMessage();
-            e.getCause();
         }
     }
 
@@ -149,7 +174,6 @@ public class MyBot extends TelegramLongPollingBot {
             sendPhoto.setPhoto(new InputFile(new FileInputStream("./" + fileName), fileName));
             sendPhoto.setCaption(caption);
             execute(sendPhoto);
-
         } catch (FileNotFoundException | TelegramApiException e) {
             e.printStackTrace();
         }
@@ -158,7 +182,6 @@ public class MyBot extends TelegramLongPollingBot {
     public static InlineKeyboardMarkup createButtons(List<String> buttonsName) {
         InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
         List<List<InlineKeyboardButton>> rowsInLine = new ArrayList<>();
-
         buttonsName.forEach(name -> {
             List<InlineKeyboardButton> rowInline = new ArrayList<>();
             InlineKeyboardButton button = new InlineKeyboardButton();
@@ -167,7 +190,6 @@ public class MyBot extends TelegramLongPollingBot {
             rowInline.add(button);
             rowsInLine.add(rowInline);
         });
-
         inlineKeyboardMarkup.setKeyboard(rowsInLine);
         return inlineKeyboardMarkup;
     }
@@ -180,8 +202,6 @@ public class MyBot extends TelegramLongPollingBot {
             execute(reply);
         } catch (TelegramApiException e) {
             e.printStackTrace();
-            e.getMessage();
-            e.getCause();
         }
     }
 
